--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,9 @@
 apply plugin: 'groovy'
 apply plugin: 'nexus'
+apply plugin: 'idea'
 
 group = 'com.github.ben-manes'
-version = '0.6'
+version = '0.7'
 
 buildscript {
   repositories {
@@ -22,7 +23,7 @@ dependencies {
   compile gradleApi()
   compile localGroovy()
 
-  def jOOQ = "3.1.0"
+  def jOOQ = "3.2.0"
   compile "org.jooq:jooq-codegen:$jOOQ"
   compile "org.jooq:jooq-meta:$jOOQ"
 
