--- a/example/build.gradle
+++ b/example/build.gradle
@@ -1,6 +1,5 @@
 apply plugin: 'java'
 apply plugin: 'jooq'
-apply plugin: 'flyway'
 
 buildscript {
   repositories {
@@ -10,7 +9,6 @@ buildscript {
 
   dependencies {
     classpath 'com.h2database:h2:1.3.170'
-    classpath 'com.github.ben-manes:gradle-flyway-plugin:0.6'
     classpath 'com.github.ben-manes:gradle-jooq-plugin:latest.integration'
   }
 }
@@ -27,7 +25,7 @@ dependencies {
   testCompile 'com.h2database:h2:1.3.170'
   testCompile 'org.hamcrest:hamcrest-all:1.3'
   testCompile 'org.modelmapper:modelmapper:0.5.5'
-  testCompile 'com.googlecode.flyway:flyway-core:2.1'
+  testCompile 'org.flywaydb:flyway-core:3.0'
   testCompile dependencies.create('org.testng:testng:6.8') {
     exclude group: 'junit'
   }
@@ -37,22 +35,14 @@ test {
   useTestNG()
 }
 
-generateJooq.dependsOn(flywayMigrate)
+//test.scanForTestClasses = false // java 8 workaround for gradle < 1.11
+generateJooq.dependsOn(":migration:flywayMigrate")
 compileJava.dependsOn(generateJooq)
-
-flyway {
-  databases {
-    main {
-      url = "jdbc:h2:${buildDir}/db/flyway"
-      schemas = [ 'example' ]
-      user = 'su'
-    }
-  }
-}
 
 generateJooq {
   outputs.upToDateWhen {
-    !flywayMigrate.didWork
+      false
+    //!flywayMigrate.didWork
   }
 }
 
@@ -75,4 +65,8 @@ jooq {
       packageName 'example.generated'
     }
   }
+}
+
+task wrapper(type: Wrapper, description: 'Generates the gradle wrapper.') {
+    gradleVersion = '1.11'
 }
