adding target directory to jooq config in example

--- a/example/build.gradle
+++ b/example/build.gradle
@@ -63,6 +63,7 @@ jooq {
     }
     target {
       packageName 'example.generated'
+      directory "${buildDir}/generated-sources/jooq"
     }
   }
 }
