--- a/example/build.gradle
+++ b/example/build.gradle
@@ -41,8 +41,7 @@ compileJava.dependsOn(generateJooq)
 
 generateJooq {
   outputs.upToDateWhen {
-      false
-    //!flywayMigrate.didWork
+    !generateJooq.dependsOnTaskDidWork()
   }
 }
 
