remove duplicate migrations by directly using the migration sub-project resources

--- a/example/build.gradle
+++ b/example/build.gradle
@@ -1,6 +1,15 @@
 apply plugin: 'java'
 apply plugin: 'jooq'
 
+/* add migration resources */
+sourceSets {
+    main {
+        resources {
+            srcDir 'migration/src/main/resources'
+        }
+    }
+}
+
 buildscript {
   repositories {
     mavenLocal()
